fix share alignment

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body { margin:0; padding:0; }
   	background-color: #FFF; 
     padding: 10px;
   	opacity:0.8;  
-  	font-family: Raleway, serif; font-size:1em;
+  	font-family: 'Raleway', sans-serif; font-size:1em;
     line-height: 0.9em;
   }
 
@@ -46,13 +46,10 @@ body { margin:0; padding:0; }
   }
 
   .sharing { 
-      margin: 10px 10px 10px 91%;
-      float: right;
+      bottom: 10px;
+      left: 10px;
       position: absolute; 
-      top: 20px; 
-      left: 0; 
-      bottom: 0; 
-      right: 0; 
+      display:block;
       z-index: 100; 
   }
 
@@ -70,6 +67,7 @@ body { margin:0; padding:0; }
   margin: 0;
   padding: 5px 10px;
   display: none;
+  
 }
 
 // Main text styles ("Share")
